Revert "Fix(mobile): Fix viewport on mobile ? (test01)"
This reverts commit 22eda8fcdda21d04e71b8ce3bbe05996f192f1b1.

--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -3,8 +3,7 @@
 #app {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100vh;
 
   &.without-height {
     height: auto;
